# territorial-intelligence-platform

./: .env.example  .gitignore  .tmp_osm_failures.txt  .tmp_ui_map_test_failures.txt  AGENTS.md  CHANGELOG.md  CONTRATO.md  HANDOFF.md  MAP_PLATFORM_SPEC.md  Makefile  PLANO.md  README.md  SPEC.md  SPEC_v1.3.md  TERRITORIAL_LAYERS_SPEC_DIAMANTINA.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: ana_hydrology_catalog.yml  anatel_connectivity_catalog.yml  aneel_energy_catalog.yml  cneas_social_assistance_catalog.yml  connectors.yml  indicators_catalog.yml  inmet_climate_catalog.yml  inpe_queimadas_catalog.yml  jobs.yml  quality_thresholds.yml  schema_contracts.yml  senatran_fleet_catalog.yml  sidra_indicators_catalog.yml  strategic_engine.yml  suasweb_social_assistance_catalog.yml  urban_pois_catalog.yml  urban_roads_catalog.yml  urban_transport_catalog.yml  waves.yml
data/: inep_diamantina_schools.csv
dbt_project/: dbt_project.yml  profiles.example.yml
docs/: BACKLOG_DADOS_NIVEL_MAXIMO.md  BACKLOG_UX_EXECUTIVO_QG.md  BRONZE_POLICY.md  CHANGELOG.md  CONTRATO.md  ESTUDO_TSE_SECAO_LOCAL_VOTACAO.md  FRONTEND_SCREENS_STRUCTURE_SPEC.md  FRONTEND_SPEC.md  FRONTEND_VISAO_PRODUTO.md  GITHUB_ISSUES_BACKLOG_DADOS_NIVEL_MAXIMO.md  GOVERNANCA_DOCUMENTAL.md  HANDOFF.md  MAP_PLATFORM_SPEC.md  MATRIZ_RASTREABILIDADE_EVOLUCAO_QG.md  MTE_RUNBOOK.md  OPERATIONS_RUNBOOK.md  PLANO.md  PLANO_EVOLUCAO_QG_ESTRATEGICO_DIAMANTINA.md  PLANO_FONTES_DADOS_DIAMANTINA.md  PLANO_IMPLEMENTACAO_QG.md  REFATORACAO_TELAS.md  RUNBOOK_ROBUSTEZ_DADOS_SEMANAL.md  STRATEGIC_ENGINE_SPEC.md  (+3 more)
(+280 files in other folders)
